fix: map path builder component doesnt move anymore when ressource list is too long

--- a/src/app/modules/harvest/harvest.component.scss
+++ b/src/app/modules/harvest/harvest.component.scss
@@ -7,7 +7,7 @@ section {
   margin-right: 1.5vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .confirm {
